--- a/src/assets/css/Service.css
+++ b/src/assets/css/Service.css
@@ -27,6 +27,7 @@
     border-radius: 12px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease, background 0.3s ease;
+    margin-bottom: 15px;
 }
 
 .service-card:hover {
