--- a/src/assets/css/Blog.css
+++ b/src/assets/css/Blog.css
@@ -1,6 +1,6 @@
 .blog-section {
     padding: 80px 0;
-    background: linear-gradient(135deg, #00c6ff, #0072ff);
+    background: #F0FFFF;;
     color: white;
     text-align: center;
     min-height: 100vh;
@@ -23,13 +23,13 @@
 .section-title {
     font-size: 36px;
     font-weight: bold;
-    color: white;
+    color: black;
     margin-bottom: 20px;
 }
 
 .blog-text {
     font-size: 18px;
-    color: #ffffff;
+    color: black;
     margin-bottom: 40px;
     line-height: 1.6;
 }
@@ -37,12 +37,12 @@
 .blog-title {
     font-size: 22px;
     font-weight: bold;
-    color: white;
+    color: black;
     margin-top: 15px;
 }
 
 .blog-description {
-    color:white;
+    color:black;
     font-size: 14px;
     margin-bottom: 15px;
 }
