--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -1,8 +1,8 @@
 /* General Section Styling */
 .about-section {
     padding: 80px 0;
-    background: linear-gradient(135deg, #00c6ff, #0072ff);
-    color: white;
+    background: #F0FFFF;
+    color: black;
     text-align: center;
     min-height: 100vh;
 }
@@ -87,7 +87,7 @@
 
 .team-creator {
     font-size: 0.8rem;
-    color: #ddd;
+    color: black;
 }
 
 /* Loading Text */
