--- a/src/assets/css/Blog.css
+++ b/src/assets/css/Blog.css
@@ -1,6 +1,6 @@
 .blog-section {
     padding: 80px 0;
-    background: #F0FFFF;;
+    background: #F0FFFF;
     color: white;
     text-align: center;
     min-height: 100vh;
