--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -36,7 +36,7 @@
 /* Responsive Fix */
 @media (max-width: 991px) {
     .navbar-collapse {
-        background: #2c3e50; /* Dark background for small screens */
+        background: #000000; /* Dark background for small screens */
         position: absolute;
         top: 100%;
         left: 0;
